force-app/main/default/objects/skedHC__Accident_Incident__c/skedHC__Accident_Incident__c.object-meta.xml
<CustomObject>
    <label>Accident &amp; Incident Report</label>
    <nameField>
        <displayFormat>ACI-{0000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accident &amp; Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>