force-app/main/default/objects/skedHC__Accident_Incident__c/fields/skedHC__Date_Time_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Date_Time_of_Incident__c</fullName>
    <label>Date &amp; Time of Incident</label>
    <type>DateTime</type>
</CustomField>