force-app/main/default/objects/skedHC__Accident_Incident__c/fields/skedHC__Details__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>