force-app/main/default/objects/skedHC__Accident_Incident__c/fields/skedHC__Exact_location_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Exact_location_of_Incident__c</fullName>
    <label>Exact location of Incident</label>
    <length>255</length>
    <type>Text</type>
</CustomField>