force-app/main/default/objects/skedHC__Accident_Incident__c/fields/skedHC__Job__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Accident &amp; Incidents</relationshipLabel>
    <relationshipName>Accident_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>