force-app/main/default/objects/skedHC__Accident_Incident__c/fields/skedHC__NOK_POA_Guardian_contact_method__c.field-meta.xml
<CustomField>
    <fullName>skedHC__NOK_POA_Guardian_contact_method__c</fullName>
    <label>NOK,POA,Guardian contact method</label>
    <type>TextArea</type>
</CustomField>