force-app/main/default/objects/skedHC__Accident_Incident__c/fields/skedHC__NOK_POA_Guardian_Details__c.field-meta.xml
<CustomField>
    <fullName>skedHC__NOK_POA_Guardian_Details__c</fullName>
    <label>NOK, POA, Guardian Details</label>
    <type>TextArea</type>
</CustomField>