force-app/main/default/objects/skedHC__Accident_Incident__c/fields/skedHC__NOK_POA_Guardian_treatment_update__c.field-meta.xml
<CustomField>
    <fullName>skedHC__NOK_POA_Guardian_treatment_update__c</fullName>
    <label>NOK,POA,Guardian treatment update</label>
    <type>TextArea</type>
</CustomField>