force-app/main/default/objects/skedHC__Accident_Incident__c/fields/skedHC__NOK_POA_Guardian_updated_on_treatment__c.field-meta.xml
<CustomField>
    <fullName>skedHC__NOK_POA_Guardian_updated_on_treatment__c</fullName>
    <label>NOK,POA, Guardian updated on treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>