force-app/main/default/objects/skedHC__Accident_Incident__c/fields/skedHC__Treatment_details__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Treatment_details__c</fullName>
    <label>Treatment details</label>
    <type>TextArea</type>
</CustomField>