force-app/main/default/objects/skedHC__Accident_Incident__c/fields/skedHC__Type_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Type_of_Incident__c</fullName>
    <label>Type of Incident</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Burns</fullName>
            </value>
            <value>
                <fullName>Damage to property</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Deterioration in mental health</fullName>
            </value>
            <value>
                <fullName>Deterioration in physical health</fullName>
            </value>
            <value>
                <fullName>Distress/behaviour</fullName>
            </value>
            <value>
                <fullName>Fall or trip</fullName>
            </value>
            <value>
                <fullName>Fire or Alarm activation</fullName>
            </value>
            <value>
                <fullName>Hospital admission</fullName>
            </value>
            <value>
                <fullName>Injury</fullName>
            </value>
            <value>
                <fullName>Missed medication</fullName>
            </value>
            <value>
                <fullName>Missed visit</fullName>
            </value>
            <value>
                <fullName>Missing person</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>