force-app/main/default/objects/skedHC__Accident_Incident__c/fields/skedHC__Was_any_treatment_given__c.field-meta.xml
<CustomField>
    <fullName>skedHC__Was_any_treatment_given__c</fullName>
    <label>Was any treatment given</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>